# 3d_annotation_tool

./: .gitignore  CMakeLists.txt  README.md  README.txt  README.txt~  akshayatrial.txt  annotation_tool.pro
data/: example_annotation.xml  example_segmentated.pcd
documentation/: list_objects.txt~  list_objects.xml~
documentation/.svn/: all-wcprops  entries
documentation/.svn/text-base/: user_guide.pdf.svn-base
icons/: icons.qrc
icons/.svn/: entries
include/: rgbd_grabber.h
rgbd_grabber/include/: rgbd_grabber.h
rgbd_grabber/src/: main.cpp  rgbd_grabber.cpp
src/: CMakeLists.txt  CMakeLists.txt~  filtervaluesdialog.h  filtervaluesdialog.ui  initialmessagedialog.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  newobjectdialog.cpp  newobjectdialog.h  newobjectdialog.ui  objectsinformation.cpp  objectsinformation.h  pointcloudmodifier.cpp  pointcloudmodifier.h  qsr.cpp  qsr.h  rgbd_grabber.cpp  selectobjectdialog.cpp  selectobjectdialog.h  viewerinteractor.cpp  viewerinteractor.h
src/.svn/: all-wcprops  entries
src/.svn/text-base/: chooseobjectdialog.cpp.svn-base  chooseobjectdialog.ui.svn-base  mainwindow.cpp.svn-base  mainwindow.h.svn-base  mainwindow.ui.svn-base  objectsinformation.cpp.svn-base  objectsinformation.h.svn-base  pointcloudmodifier.cpp.svn-base  pointcloudmodifier.h.svn-base  selectobjectdialog.cpp.svn-base  selectobjectdialog.h.svn-base  viewerinteractor.cpp.svn-base  viewerinteractor.h.svn-base
